<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/add_cart"
            android:title="@string/cart" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/options_lines"
            android:title="@string/categories" />


    </group>


        <item
            android:title="Profile">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_orders"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/orders" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
                </group>
            </menu>
        </item>


        <item
            android:title="Communicate">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/review"
                    android:title="@string/nav_about_us" />
                <item
                    android:id="@+id/nav_querry"
                    android:icon="@drawable/phone"
                    android:title="@string/nav_querry" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/share"
                    android:title="@string/nav_share" />
                </group>
            </menu>
        </item>

</menu>